# bug-fix-py

./: .coverage  .gitignore  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.md  __main__.py  app.py  bug-fix-auto.spec  requirements.txt  reviewers.json.example  run  run.py  setup.cfg  setup.py  test.py
bugfix/: .env  __init__.py  bugfix.py  run.py  test.py
bugfix/api/: __init__.py  api.py
bugfix/constants/: __init__.py  cms.py
bugfix/text/: __init__.py  formatting.py
bugfix/utils/: __init__.py  cherry_pick.py  cherrypick.py  fix_branch.py  fixbranch.py  input.py  repository_tools.py  repositoryutils.py  transition.py  validation.py
bugfixpy/: __init__.py  __main__.py  gitrepository.py  jira_api.py  jiraapi.py
bugfixpy/api/: jira_api.py
bugfixpy/bugfixpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bugfixpy/classes/: __init__.py  use_scraper.py
bugfixpy/cms/: __init__.py  cms_scraper.py  constants.py  scraper_data.py  soup_parser.py
bugfixpy/constants/: __init__.py  cms.py  colors.py  git.py  headers.py  instructions.py  jira.py
bugfixpy/exceptions/: __init__.py  checkoutfailederror.py  continue_cherry_picking_failed_error.py  (+4 more)
docs/: bugfixpy.constants.rst  bugfixpy.exceptions.rst  bugfixpy.formatter.rst  bugfixpy.rst  bugfixpy.scraper.rst  bugfixpy.scripts.cms.rst  bugfixpy.scripts.git.rst  bugfixpy.scripts.modes.rst  bugfixpy.scripts.rst  bugfixpy.utils.rst  conf.py  modules.rst
src/: __init__.py  bugfix.py  repo.py  revert.py  run.py  setup_credentials.py  test.py  transition.py
tests/: __init__.py  test_manual_fix.py
(+140 files in other folders)
