[metadata]
name = bugfixpy
version = 2.0.0
license = MIT
description = SCW automated bug fixing program
long_description = file: README.rst
author = Matt Proctor
author_email = matthewalanproctor@gmail.com
url = https://github.com/proctorinc/bugfixpy

[options]
packages = find:
package_dir =
    =bugfixpy
include_package_data = True
install_requires =
    gitpython==3.1.27
    python-dotenv==0.20.0
    requests==2.27.1
    bs4==0.0.1

[options.packages.find]
where=bugfixpy